<resources>
    <string name="app_name">Native Resources</string>
    <string name="appointment">Appointment</string>
    <string name="contacts">Contacts</string>
    <string name="addImage">Add image</string>
    <string name="removeImage">Remove Image</string>
    <string name="camera">Camera</string>
    <string name="localization">Location</string>
    <string name="watch">Watch</string>
    <string name="takePicture">Take picture</string>
    <string name="openCamera">Open Camera</string>
</resources>