<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/appointment" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toBottomOf="@id/cv_appointment">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/contacts" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toBottomOf="@id/cv_contacts">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/addImage" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toBottomOf="@id/cv_images">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/camera" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toBottomOf="@id/cv_camera">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/localization" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>